--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,4 +6,14 @@
 <% @movie.actors.sort_actors.each do |actor| %>
   <%= actor.name %>
   <% end %>
-<strong>Average Age: <%=@movie.actors.average_age%>
+<strong>Average Age: <%=@movie.actors.average_age.round(1)%>
+
+<h2>Submit New Actor</h2>
+
+  <%= form_tag("/movies/#{@movie.id}/actors", method: :post) do %>
+<%= label_tag :name %>
+<%= text_field_tag :name %><br>
+<%= label_tag :age %>
+<%= text_field_tag :age %><br>
+<%= submit_tag 'Submit' %>
+<% end %>
